# frolic-lang

./: .gitignore  Cargo.toml  README.md
ast/: Cargo.toml
ast/src/: dottedname.rs  glob.rs  lib.rs  traits.rs
ast/src/asts/: defs.rs  flow.rs  func.rs  groups.rs  lits.rs  misc.rs  mod.rs  op.rs  scope.rs  types.rs
cli/: Cargo.toml
cli/src/: debug.rs  fmt.rs  lib.rs  main.rs
fmt/: Cargo.toml
fmt/src/: color.rs  lib.rs
fmt/src/fmt/: lits.rs  misc.rs  mod.rs  utils.rs
ir/: Cargo.toml
ir/src/: common.rs  lib.rs
ir/src/common/: disp.rs  lang.rs  list.rs  mod.rs  owned.rs  symbols.rs
ir/src/hir/: disp.rs  error.rs  lang.rs  mod.rs
ir/src/hir/lang/: disp.rs  mod.rs
ir/src/hir/lower/: defs.rs  error.rs  flow.rs  func.rs  groups.rs  lits.rs  misc.rs  mod.rs  op.rs  scope.rs  types.rs
parser/: Cargo.toml
parser/src/: lib.rs  par.rs
parser/src/lexer/: error.rs  mod.rs  tokenizer.rs  tokens.rs
parser/src/lexer/tokenizer/: literals.rs  misc.rs  mod.rs  op.rs
parser/src/macros/: mod.rs
parser/src/parser/: decl.rs  error.rs  expr.rs  mod.rs  traits.rs
utils/: Cargo.toml
utils/src/: atomic.rs  dottedname.rs  errors.rs  files.rs  intern.rs  lib.rs  span.rs  synccell.rs
