[workspace]
resolver = "2"
members = ["ast", "cli", "ir", "parser", "utils"]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/matt-cornell/frolic-lang"

[workspace.dependencies]
bstr = { version = "1.9.1", default-features = false }
frolic-utils = { version = "0.0.1", path = "utils" }
frolic-ast = { version = "0.0.1", path = "ast" }
miette = "7.2"
smallvec = "1.13.2"
thiserror = "1.0"
