[workspace]
resolver = "2"
members = ["ast", "cli", "ir", "parser", "utils"]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/matt-cornell/frolic-lang"

[workspace.dependencies]
bstr = { version = "1.9.1", default-features = false }
derivative = "2.2.0"
frolic-ast = { version = "0.0.1", path = "ast" }
frolic-ir = { version = "0.0.1", path = "ir" }
frolic-parser = { version = "0.0.1", path = "parser" }
frolic-utils = { version = "0.0.1", path = "utils" }
impl-tools = "0.10.0"
miette = "7.2"
smallvec = { version = "1.13.2", features = ["const_new"] }
thiserror = "1.0"
