[package]
name = "frolic-ast"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
frolic-utils = { version = "0.1.0", path = "../utils" }
smallvec.workspace = true
