[package]
name = "frolic-ast"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
derivative.workspace = true
frolic-utils.workspace = true
smallvec.workspace = true
vec1.workspace = true
