[package]
name = "frolic-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
fmt2io = "0.2.0"
frolic-ast.workspace = true
frolic-ir.workspace = true
frolic-parser.workspace = true
frolic-utils.workspace = true
indenter = "0.3.3"
miette = { workspace = true, features = ["fancy"] }

[features]
default = ["rayon"]

rayon = ["frolic-parser/rayon", "frolic-ir/rayon"]
