[package]
name = "frolic-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
fmt2io = "0.2.0"
frolic-ast.workspace = true
frolic-fmt = { version = "0.0.1", path = "../fmt", optional = true }
frolic-ir.workspace = true
frolic-parser.workspace = true
frolic-utils.workspace = true
indenter = "0.3.3"
miette.workspace = true
mlua.workspace = true
serde_json = { version = "1.0.116", optional = true }
supports-color = { version = "3.0.0", optional = true }

[features]
default = ["bin", "lib-default"]
bin = ["mlua/lua54", "miette/fancy"]
lib-default = ["rayon", "fmt", "serde"]

rayon = ["frolic-ir/rayon"]
fmt = ["frolic-fmt", "supports-color"]
serde = ["serde_json", "frolic-fmt?/serde"]
