[package]
name = "frolic-fmt"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
frolic-ast = { version = "0.0.1", path = "../ast" }
frolic-parser = { version = "0.0.1", path = "../parser" }
frolic-utils = { version = "0.0.1", path = "../utils" }
owo-colors = "4.0.0"
serde = { version = "1.0.198", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
