[package]
name = "frolic-ir"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
atomic_ref = "0.2.1"
bstr.workspace = true
bump-scope = "0.5.0"
derivative.workspace = true
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut", "from", "nightly"] }
frolic-ast.workspace = true
frolic-utils.workspace = true
impl-tools.workspace = true
indenter = "0.3.3"
miette.workspace = true
rayon = { version = "1.10.0", optional = true }
smallvec.workspace = true
thiserror.workspace = true
thread_local = { version = "1.1.8", features = ["nightly"] }

[features]
rayon = ["dep:rayon"]
