[package]
name = "frolic-parser"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
derivative.workspace = true
frolic-ast.workspace = true
frolic-utils.workspace = true
miette.workspace = true
rayon = { version = "1.10.0", optional = true }
smallvec.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
thiserror.workspace = true
unicode-ident = "1.0.12"
vec1.workspace = true

[features]
rayon = ["dep:rayon"]
