[package]
name = "frolic-parser"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr.workspace = true
derivative.workspace = true
frolic-ast.workspace = true
frolic-utils.workspace = true
miette.workspace = true
mlua.workspace = true
os_str_bytes = { version = "7.0.0", default-features = false }
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
unicode-ident = "1.0.12"
vec1.workspace = true
