[package]
name = "frolic-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcar = "0.2.4"
impl-tools.workspace = true
miette.workspace = true
spin = { version = "0.9.8", features = ["spin_mutex"] }
